modules/gdscript/tests/scripts/analyzer/errors/cyclic_reference.notest.gd
class_name TestCyclicRefExternal

const External = preload("cyclic_reference.gd")

var member = External.member
